--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "express": "^4.17.1"
   },
   "scripts": {
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "start": "node server.js"
   },
   "license": "MIT"
 }
